--- a/Sources/com.kumariyer.analogclock.sdPlugin/index.html
+++ b/Sources/com.kumariyer.analogclock.sdPlugin/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>com.elgato.analogclock</title>
+	<title>com.kumariyer.analogclock</title>
 	<meta charset="utf-8" />
 </head>
 
@@ -13,6 +13,9 @@
 	<script src="action/js/clockfaces.js"></script>
 	<script src="action/js/clock.js"></script>
 	<script src="js/app.js"></script>
+	<script> 
+		console.log("here.");
+	</script>
 </body>
 
 </html>
